// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slide toggle: should render a checked state 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    checked={true}
    className="input"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testSlideToggle"
  >
    <div
      className="slideContainer"
    >
      <div
        className="slider"
      />
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
    <span
      className="labelText labelRight"
    >
      Test toggle
    </span>
  </label>
</div>
`;

exports[`Slide toggle: should render with default props 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    className="input"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testSlideToggle"
  >
    <div
      className="slideContainer"
    >
      <div
        className="slider"
      />
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
    <span
      className="labelText labelRight"
    >
      Test toggle
    </span>
  </label>
</div>
`;

exports[`Slide toggle: should render with the label hidden 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    className="input"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testSlideToggle"
  >
    <div
      className="slideContainer"
    >
      <div
        className="slider"
      />
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
  </label>
</div>
`;

exports[`Slide toggle: should render with the label on the left 1`] = `
<div
  className="root"
>
  <input
    aria-label="Test toggle"
    className="input inputLeft"
    id="testSlideToggle"
    type="checkbox"
  />
  <label
    className="switch"
    htmlFor="testSlideToggle"
  >
    <span
      className="labelText labelLeft"
    >
      Test toggle
    </span>
    <div
      className="slideContainer"
    >
      <div
        className="slider"
      />
      <TickIcon
        className="slideButton"
        svgClassName="svg"
      />
    </div>
  </label>
</div>
`;
